unpackaged/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Affl_ProgEnroll_Copy_End_Date__c.field-meta.xml
<CustomField>
    <fullName>hed__Affl_ProgEnroll_Copy_End_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether to set the End Date of the Affiliation created with a Program Enrollment. If enabled, set the End Date to the Program Enrollment&#39;s End Date. If disabled, don&#39;t specify the Affiliation&#39;s End Date.</description>
    <inlineHelpText>Indicates whether to set the End Date of the Affiliation created with a Program Enrollment. If enabled, set the End Date to the Program Enrollment&#39;s End Date. If disabled, don&#39;t specify the Affiliation&#39;s End Date.</inlineHelpText>
    <label>Affil End Date Copy from Prog Enroll</label>
    <type>Checkbox</type>
</CustomField>