unpackaged/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Affl_ProgEnroll_Del__c.field-meta.xml
<CustomField>
    <fullName>hed__Affl_ProgEnroll_Del__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether to delete an Affiliation when its related Program Enrollment is deleted. If enabled, delete the Affiliation. If disabled, set the Affiliation&#39;s Status to the value specified in the related setting, Affil Status When Delete Prog Enroll.</description>
    <inlineHelpText>Indicates whether to delete an Affiliation when its related Program Enrollment is deleted. If enabled, delete the Affiliation. If disabled, set the Affiliation&#39;s Status to the value specified in the related setting, Affil Status When Delete Prog Enroll.</inlineHelpText>
    <label>Affil Delete When Delete Prog Enroll</label>
    <type>Checkbox</type>
</CustomField>