unpackaged/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Lead_Converted_Account_RTypes__c.field-meta.xml
<CustomField>
    <fullName>hed__Lead_Converted_Account_RTypes__c</fullName>
    <description>The Account record types to use EDA&#39;s account naming format when converting Leads.</description>
    <inlineHelpText>The Account record types to use EDA&#39;s account naming format when converting Leads.</inlineHelpText>
    <label>Lead-Converted Account Record Types</label>
    <type>TextArea</type>
</CustomField>